@@ -28,25 +28,29 @@ import io.swagger.v3.core.util.PathUtils;
 import io.swagger.v3.core.util.Yaml;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.models.OpenAPI;
+
 import org.springdoc.api.AbstractOpenApiResource;
 import org.springdoc.core.*;
-import org.springdoc.core.customizers.OpenApiCustomiser;
-import org.springdoc.core.customizers.OperationCustomizer;
-import org.springdoc.webmvc.core.RouterFunctionProvider;
+import org.springdoc.core.customizers.SpringDocCustomizers;
+import org.springdoc.core.providers.ActuatorProvider;
+import org.springdoc.core.providers.SecurityOAuth2Provider;
+import org.springdoc.core.providers.SpringWebProvider;
 import org.springframework.beans.factory.ObjectFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.MediaType;
+import org.springframework.util.CollectionUtils;
+import org.springframework.util.MimeType;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.method.HandlerMethod;
 import org.springframework.web.servlet.ModelAndView;
-import org.springframework.web.servlet.mvc.condition.PatternsRequestCondition;
 import org.springframework.web.servlet.mvc.method.RequestMappingInfo;
 import org.springframework.web.servlet.mvc.method.RequestMappingInfoHandlerMapping;
 
 import javax.servlet.http.HttpServletRequest;
 
+import java.nio.charset.StandardCharsets;
 import java.util.*;
 
 import static org.springdoc.core.Constants.*;
@@ -58,7 +62,7 @@ import static org.springframework.util.AntPathMatcher.DEFAULT_PATH_SEPARATOR;
  *
  * TODO: Would be better to load properties from
  * @PropertySource("classpath:springdoc.properties")
- * springdoc.packagesToScan=org.fao.geonet.api,org.fao.geonet.monitor.service
+ * springdoc.packagesToScan=org.fao.geonet.api,org.fao.geonet.services.inspireatom,org.fao.geonet.monitor.service
  * springdoc.paths-to-match=/api/**
  * springdoc.paths-to-exclude=/api/0.1/**
  * springdoc.api-docs.enabled=true
@@ -66,6 +70,9 @@ import static org.springframework.util.AntPathMatcher.DEFAULT_PATH_SEPARATOR;
  * springdoc.cache.disabled=true
  * springdoc.writer-with-order-by-keys=true
  * springdoc.writer-with-default-pretty-printer=true
+ */
+
+/* This class is based off of org.springdoc.webmvc.api.OpenApiResource
  */
 @RestController
 public class OpenApiController extends AbstractOpenApiResource {
@@ -76,27 +83,22 @@ public class OpenApiController extends AbstractOpenApiResource {
 
     private final Optional<SecurityOAuth2Provider> springSecurityOAuth2Provider;
 
-    private final Optional<RouterFunctionProvider> routerFunctionProvider;
-
     @Autowired
     public OpenApiController(ObjectFactory<OpenAPIService> openAPIBuilderObjectFactory,
                              AbstractRequestService requestBuilder,
                              GenericResponseService responseBuilder,
                              OperationService operationParser,
                              RequestMappingInfoHandlerMapping requestMappingHandlerMapping,
-                             Optional<ActuatorProvider> servletContextProvider,
-                             Optional<List<OperationCustomizer>> operationCustomizers,
-                             Optional<List<OpenApiCustomiser>> openApiCustomisers,
                              SpringDocConfigProperties springDocConfigProperties,
-                             Optional<ActuatorProvider> actuatorProvider,
-                             Optional<SecurityOAuth2Provider> springSecurityOAuth2Provider,
-                             Optional<RouterFunctionProvider> routerFunctionProvider) {
-        super(DEFAULT_GROUP_NAME, openAPIBuilderObjectFactory, requestBuilder, responseBuilder, operationParser, operationCustomizers, openApiCustomisers, springDocConfigProperties, actuatorProvider);
-        springDocConfigProperties.setPathsToExclude(Arrays.asList(new String[]{"/0.1/**"}));
-        springDocConfigProperties.setPackagesToScan(Arrays.asList(new String[]{
-            "org.fao.geonet.api",
-            "org.fao.geonet.services.inspireatom",
-            "org.fao.geonet.monitor.service"}));
+                             SpringDocProviders springDocProviders,
+                             SpringDocCustomizers springDocCustomizers,
+                             Optional<ActuatorProvider> servletContextProvider,
+                             Optional<SecurityOAuth2Provider> springSecurityOAuth2Provider) {
+        super(DEFAULT_GROUP_NAME, openAPIBuilderObjectFactory, requestBuilder, responseBuilder, operationParser, springDocConfigProperties, springDocProviders, springDocCustomizers);
+        springDocConfigProperties.setPathsToExclude(List.of("/0.1/**"));
+        springDocConfigProperties.setPackagesToScan(Arrays.asList("org.fao.geonet.api",
+                "org.fao.geonet.services.inspireatom",
+                "org.fao.geonet.monitor.service"));
 
         // Ensure open api document is consistently orders to make it easier to compare changes later.
         springDocConfigProperties.setWriterWithOrderByKeys(true);
@@ -108,7 +110,6 @@ public class OpenApiController extends AbstractOpenApiResource {
         this.requestMappingHandlerMapping = requestMappingHandlerMapping;
         this.servletContextProvider = servletContextProvider;
         this.springSecurityOAuth2Provider = springSecurityOAuth2Provider;
-        this.routerFunctionProvider = routerFunctionProvider;
 
         // Ensure all enums are written based on the enum name.
         Json.mapper().configure(SerializationFeature.WRITE_ENUMS_USING_TO_STRING, false);
@@ -117,30 +118,30 @@ public class OpenApiController extends AbstractOpenApiResource {
 
     @Operation(hidden = true)
     @GetMapping(value = "/{portal}/api/doc", produces = MediaType.APPLICATION_JSON_VALUE)
-    public String openapiJson(HttpServletRequest request)
+    public String openapiJson(HttpServletRequest request, Locale locale)
         throws JsonProcessingException {
-        setServerBaseUrl(request);
-        OpenAPI openAPI = this.getOpenApi(request.getLocale());
-        return writeJsonValue(openAPI);
+        calculateServerUrl(request, locale);
+        OpenAPI openAPI = this.getOpenApi(locale);
+        return new String(this.writeJsonValue(openAPI), StandardCharsets.UTF_8);
     }
 
     @Operation(hidden = true)
     @GetMapping(value = "/{portal}/api/doc.yml", produces = APPLICATION_OPENAPI_YAML)
-    public String openapiYaml(HttpServletRequest request)
+    public String openapiYaml(HttpServletRequest request, Locale locale)
         throws JsonProcessingException {
-        setServerBaseUrl(request);
-        OpenAPI openAPI = this.getOpenApi(request.getLocale());
-        return writeYamlValue(openAPI);
+        calculateServerUrl(request, locale);
+        OpenAPI openAPI = this.getOpenApi(locale);
+        return new String(this.writeYamlValue(openAPI), StandardCharsets.UTF_8);
     }
 
     @Override
-    protected void getPaths(Map<String, Object> restControllers, Locale locale) {
+    protected void getPaths(Map<String, Object> restControllers, Locale locale, OpenAPI openAPI) {
         Map<RequestMappingInfo, HandlerMethod> map = requestMappingHandlerMapping.getHandlerMethods();
-        calculatePath(restControllers, map, Optional.empty(), locale);
+        calculatePath(restControllers, map, locale, openAPI);
 
         if (servletContextProvider.isPresent()) {
             map = servletContextProvider.get().getMethods();
-            calculatePath(restControllers, map, servletContextProvider, locale);
+            calculatePath(restControllers, map, locale, openAPI);
         }
         if (this.springSecurityOAuth2Provider.isPresent()) {
             SecurityOAuth2Provider securityOAuth2Provider = this.springSecurityOAuth2Provider.get();
@@ -148,39 +149,53 @@ public class OpenApiController extends AbstractOpenApiResource {
             Map<String, Object> requestMappingMapSec = securityOAuth2Provider.getFrameworkEndpoints();
             Class[] additionalRestClasses = requestMappingMapSec.values().stream().map(Object::getClass).toArray(Class[]::new);
             AbstractOpenApiResource.addRestControllers(additionalRestClasses);
-            calculatePath(requestMappingMapSec, mapOauth, Optional.empty(), locale);
+            calculatePath(requestMappingMapSec, mapOauth, locale, openAPI);
         }
     }
 
+
     protected void calculatePath(Map<String, Object> restControllers,
                                  Map<RequestMappingInfo, HandlerMethod> map,
-                                 Optional<ActuatorProvider> actuatorProvider,
-                                 Locale locale) {
-        for (Map.Entry<RequestMappingInfo, HandlerMethod> entry : map.entrySet()) {
-            RequestMappingInfo requestMappingInfo = entry.getKey();
-            HandlerMethod handlerMethod = entry.getValue();
-            PatternsRequestCondition patternsRequestCondition = requestMappingInfo.getPatternsCondition();
-            Set<String> patterns = patternsRequestCondition.getPatterns();
-            Map<String, String> regexMap = new LinkedHashMap<>();
-            for (String pattern : patterns) {
-                String operationPath = PathUtils.parsePath(pattern, regexMap)
-                    .replace("/{portal}/api", "");
-                if (((actuatorProvider.isPresent()
-                    && actuatorProvider.get().isRestController(operationPath, handlerMethod))
-                    || isRestController(restControllers, handlerMethod, operationPath))
-                    && isPackageToScan(handlerMethod.getBeanType().getPackage())
-                    && isPathToMatch(operationPath)) {
-                    Set<RequestMethod> requestMethods = requestMappingInfo.getMethodsCondition().getMethods();
-
-                    // default allowed requestmethods
-                    if (requestMethods.isEmpty())
-                        requestMethods = this.getDefaultAllowedHttpMethods();
-                    calculatePath(handlerMethod, operationPath, requestMethods, locale);
-//                } else {
-//                    System.out.println("API path ignored: " + operationPath);
+                                 Locale locale,
+                                 OpenAPI openAPI) {
+        TreeMap<RequestMappingInfo, HandlerMethod> methodTreeMap = new TreeMap<>(byReversedRequestMappingInfos());
+        methodTreeMap.putAll(map);
+        Optional<SpringWebProvider> springWebProviderOptional = springDocProviders.getSpringWebProvider();
+        springWebProviderOptional.ifPresent(springWebProvider -> {
+            for (Map.Entry<RequestMappingInfo, HandlerMethod> entry : map.entrySet()) {
+                RequestMappingInfo requestMappingInfo = entry.getKey();
+                HandlerMethod handlerMethod = entry.getValue();
+                Set<String> patterns = springWebProvider.getActivePatterns(requestMappingInfo);
+                if (!CollectionUtils.isEmpty(patterns)) {
+                    Map<String, String> regexMap = new LinkedHashMap<>();
+                    for (String pattern : patterns) {
+                        String operationPath = PathUtils.parsePath(pattern, regexMap)
+                            .replace("/{portal}/api", "");
+                        String[] produces = requestMappingInfo.getProducesCondition().getProducibleMediaTypes().stream().map(MimeType::toString).toArray(String[]::new);
+                        String[] consumes = requestMappingInfo.getConsumesCondition().getConsumableMediaTypes().stream().map(MimeType::toString).toArray(String[]::new);
+                        String[] headers = requestMappingInfo.getHeadersCondition().getExpressions().stream().map(Object::toString).toArray(String[]::new);
+                        String[] params = requestMappingInfo.getParamsCondition().getExpressions().stream().map(Object::toString).toArray(String[]::new);
+                        if ((isRestController(restControllers, handlerMethod, operationPath) || isActuatorRestController(operationPath, handlerMethod))
+                            && isFilterCondition(handlerMethod, operationPath, produces, consumes, headers)) {
+                            Set<RequestMethod> requestMethods = requestMappingInfo.getMethodsCondition().getMethods();
+                            // default allowed requestmethods
+                            if (requestMethods.isEmpty())
+                                requestMethods = this.getDefaultAllowedHttpMethods();
+                            calculatePath(handlerMethod, operationPath, requestMethods, consumes, produces, headers, params, locale, openAPI);
+                        }
+                    }
                 }
             }
-        }
+        });
+    }
+
+    /**
+     * By reversed request mapping infos comparator.
+     *
+     * @return the comparator
+     */
+    private Comparator<RequestMappingInfo> byReversedRequestMappingInfos() {
+        return (o2, o1) -> o1.toString().compareTo(o2.toString());
     }
 
     @Override
@@ -194,14 +209,16 @@ public class OpenApiController extends AbstractOpenApiResource {
                 || !ModelAndView.class.isAssignableFrom(handlerMethod.getMethod().getReturnType()));
     }
 
-    private String getServerBaseUrl(HttpServletRequest request) {
+    protected void calculateServerUrl(HttpServletRequest request, Locale locale) {
+        super.initOpenAPIBuilder(locale);
+        String calculatedUrl = this.getServerUrl(request);
+        this.openAPIService.setServerBaseUrl(calculatedUrl);
+    }
+
+    private String getServerUrl(HttpServletRequest request) {
         String contextPath = request.getContextPath();
         StringBuffer requestURL = request.getRequestURL();
         String serverBaseUrl = requestURL.substring(0, requestURL.indexOf(contextPath) + contextPath.length());
         return serverBaseUrl;
-    }
-
-    protected void setServerBaseUrl(HttpServletRequest request) {
-        this.openAPIService.setServerBaseUrl(getServerBaseUrl(request));
     }
 }
